tests/NormalTests/paczka1/fuzzy1/21894716.err
Error in line 1: 54yC0D A782 12,2
Error in line 3: jVGtSfuKJh A866 94,0
Error in line 7: 54yC0D A701 76,5
Error in line 18: jVGtSfuKJh A782 65,61
Error in line 11: p8KIC4Kl A701 52,4
Error in line 14: pbTTM A701 368,0
Error in line 27: pbTTM A866 84,2
Error in line 33: pbTTM A782 4,65
Error in line 15: 54yC0D S424 73,3
